<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
>
    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_selector_title"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:hint="@string/language_selector_search"
    />

    <ListView
            android:id="@+id/lang_list"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            android:dividerHeight="0dp"
            android:divider="@null"
            tools:listitem="@layout/fragment_language_dialog_item"
    />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/use_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_selector_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lang_list"
            style="?attr/buttonBarButtonStyle"
    />

</androidx.constraintlayout.widget.ConstraintLayout>