<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/map_empty_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:paddingHorizontal="60dp"
>


    <ImageView
            android:id="@+id/icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/splash_large"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
            android:id="@+id/text_appname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32sp"

            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintBottom_toTopOf="@id/text_help1"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0"

            tools:text="aMetro"
    />

    <TextView
            android:id="@+id/text_help1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/msg_no_maps_loaded"
            android:textColor="@android:color/white"
            android:textSize="22sp"

            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_appname"
            app:layout_constraintBottom_toTopOf="@id/text_help2"

            tools:visibility="invisible"
    />

    <TextView
            android:id="@+id/text_help2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/msg_press_to_add_map"
            android:textColor="@android:color/white"
            android:textSize="16sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_help1"
            app:layout_constraintBottom_toBottomOf="parent"

            tools:text="long long long long long long long long long long long long long long long long long long"
            tools:visibility="invisible"
    />

    <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="@dimen/map_loading_size"
            android:layout_height="@dimen/map_loading_size"
            android:visibility="invisible"

            style="?android:attr/progressBarStyleLarge"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/loading_text"
            app:layout_constraintTop_toTopOf="@id/text_help1"
            app:layout_constraintHorizontal_chainStyle="packed"

            tools:visibility="visible"
    />

    <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            android:gravity="center_vertical|center_horizontal"
            android:text="@string/msg_map_loading_progress"
            android:textColor="@android:color/white"
            android:includeFontPadding="false"
            android:textSize="22sp"

            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/loading_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/loading_progress"
            app:layout_constraintBottom_toBottomOf="@id/loading_progress"

            tools:visibility="visible"
    />

</androidx.constraintlayout.widget.ConstraintLayout>