<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include android:id="@+id/include_toolbar" layout="@layout/widget_toolbar"/>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp"
        >

            <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/splash_large"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="22sp"

                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toTopOf="@id/icon"
                    app:layout_constraintBottom_toTopOf="@id/version"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"

                    tools:text="aMetro"
            />

            <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"

                    app:layout_constraintTop_toBottomOf="@id/app_name"
                    app:layout_constraintBottom_toTopOf="@id/buttons"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="v0.0.0"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toBottomOf="@id/version"
                    app:layout_constraintBottom_toBottomOf="@id/icon"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:itemCount="1"
                    tools:listitem="@layout/widget_icon_button"
            />

            <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/header_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="icon,buttons"
            />

            <View
                    android:id="@+id/header_separator"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="#C7C7C7"

                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/header_barrier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            <TextView
                    android:id="@+id/desc"
                    android:textSize="13sp"
                    android:padding="@dimen/panel_bottom_padding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"

                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/header_separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="@string/about_desc"
            />

            <TextView
                    android:id="@+id/section_components"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/about_section_text_size"
                    android:text="@string/about_section_components"

                    android:background="@drawable/bg_ripple_transparent"
                    android:layout_marginTop="10dp"
                    android:paddingVertical="5dp"
                    app:layout_constraintTop_toBottomOf="@id/desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constrainedWidth="true"
            />

            <ImageView
                    android:id="@+id/section_components_expand"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_expand"

                    app:layout_constraintTop_toTopOf="@id/section_components"
                    app:layout_constraintBottom_toBottomOf="@id/section_components"
                    app:layout_constraintEnd_toEndOf="@id/section_components"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/components"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"

                    app:layout_constraintTop_toBottomOf="@id/section_components"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:itemCount="3"
                    tools:listitem="@layout/widget_about_component_item"
                    tools:visibility="visible"
            />

            <TextView
                    android:id="@+id/section_license"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/about_section_text_size"
                    android:text="@string/about_section_license"

                    android:background="@drawable/bg_ripple_transparent"
                    android:layout_marginTop="10dp"
                    android:paddingVertical="5dp"
                    app:layout_constraintTop_toBottomOf="@id/components"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constrainedWidth="true"
            />

            <ImageView
                    android:id="@+id/section_license_expand"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_expand"

                    app:layout_constraintTop_toTopOf="@id/section_license"
                    app:layout_constraintBottom_toBottomOf="@id/section_license"
                    app:layout_constraintEnd_toEndOf="@id/section_license"
                    />

            <TextView
                    android:id="@+id/license"
                    android:textSize="13sp"
                    android:padding="@dimen/panel_bottom_padding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"

                    app:layout_constraintTop_toBottomOf="@id/section_license"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="license license license license license license license license license license license license license "
                    tools:visibility="visible"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
